# libppm

./: .gitignore  Cargo.toml  README.md  build.rs  embeded.py
assets/: avatar_swag.ppm  rabbit.ppm
src/: lib.rs
src/structures/: image.rs  mod.rs  w_matrix.rs
webapp/: index.py  requirements.txt
webapp/output/: avatar_swag.ppm  rabbit.ppm  rapidTest.ppm
webapp/templates/: index.html
