[package]
name = "ppm"
version = "0.1.0"
authors = ["root"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.66"
[build-dependencies]
cc = "1.0.28"

[lib]
name = "ppm"
crate-type = ["dylib"]
